syntax = "proto3";

option csharp_namespace = "Hazelcast.UserCode.Transports.Grpc";

package usercode;

service Transport {
  rpc invoke (stream UserCodeGrpcMessage) returns (stream UserCodeGrpcMessage) {}
}

enum MessageType {
  CONNECT=0;
  USER_CODE=1;
  END=2;
  ERROR=3;
  TIMEOUT=4;
}

message UserCodeGrpcMessage {
  int64 id = 1;
  MessageType type = 2;
  bytes payload = 3;
}
