syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hazelcast.usercode.grpc";
option java_outer_classname = "TransportTopLevel";

package usercode;

service Transport {
  rpc invoke (stream UserCodeGrpcMessage) returns (stream UserCodeGrpcMessage) {}
}

message UserCodeGrpcMessage {
  int64 id = 1;
  string functionName = 2;
  bytes payload = 3;
}
